Spacing fixed

--- a/index.css
+++ b/index.css
@@ -52,11 +52,13 @@ button {
   flex-direction: column;
   align-items: start;
   margin: 0;
-  padding-left: 2%;
+  padding: 0;
 }
 
 .checkbox-container {
   display: flex;
   flex-direction: column;
   align-items: start;
+  padding-left: 5%;
+  margin: 3%;
 }
